Added authentication module

--- a/src/app/main/apps/e-commerce/order/order.component.html
+++ b/src/app/main/apps/e-commerce/order/order.component.html
@@ -353,12 +353,12 @@
                                                     </div>
 
                                                     <div class="info">
-                                                        <div class="title">FUSE INC.</div>
-                                                        <div class="address">2810 Country Club Road Cranford, NJ 07016
+                                                        <div class="title">1world.io</div>
+                                                        <div class="address">No 50, Jalan 5/23E, Taman Danau Kota, Setapak, KL
                                                         </div>
-                                                        <div class="phone">+66 123 455 87</div>
-                                                        <div class="email">hello@fuseinc.com</div>
-                                                        <div class="website">www.fuseinc.com</div>
+                                                        <div class="phone">+60 11 56863351</div>
+                                                        <div class="email">admin@1world.io</div>
+                                                        <div class="website">www.1world.io</div>
                                                     </div>
                                                 </div>
                                             </div>
