--- a/src/app/main/pages/authentication/forgot-password-2/forgot-password-2.component.html
+++ b/src/app/main/pages/authentication/forgot-password-2/forgot-password-2.component.html
@@ -7,7 +7,7 @@
         </div>
 
         <div class="title" [@animate]="{value:'*',params:{delay:'50ms',y:'25px'}}">
-            Welcome to the FUSE!
+            Welcome to 1WORLD.IO !
         </div>
 
         <div class="description" [@animate]="{value:'*',params:{delay:'100ms',y:'25px'}}">
@@ -43,7 +43,7 @@
                 </mat-form-field>
 
                 <button mat-raised-button class="submit-button" color="accent"
-                        aria-label="SEND RESET LINK" [disabled]="forgotPasswordForm.invalid">
+                        aria-label="SEND RESET LINK" [disabled]="forgotPasswordForm.invalid" (click)="recoverPassword()">
                     SEND RESET LINK
                 </button>
 
