--- a/src/app/main/pages/authentication/register-2/register-2.component.html
+++ b/src/app/main/pages/authentication/register-2/register-2.component.html
@@ -7,7 +7,7 @@
         </div>
 
         <div class="title" [@animate]="{value:'*',params:{delay:'50ms',y:'25px'}}">
-            Welcome to the FUSE!
+            Welcome to the 1world.io
         </div>
 
         <div class="description" [@animate]="{value:'*',params:{delay:'100ms',y:'25px'}}">
@@ -32,7 +32,7 @@
 
                 <mat-form-field appearance="outline">
                     <mat-label>Name</mat-label>
-                    <input matInput formControlName="name">
+                    <input matInput formControlName="username" autocomplete="username">
                     <mat-icon matSuffix class="secondary-text">account_circle</mat-icon>
                     <mat-error>
                         Name is required
@@ -41,7 +41,7 @@
 
                 <mat-form-field appearance="outline">
                     <mat-label>Email</mat-label>
-                    <input matInput formControlName="email">
+                    <input matInput formControlName="email" autocomplete="email">
                     <mat-icon matSuffix class="secondary-text">mail</mat-icon>
                     <mat-error *ngIf="registerForm.get('email').hasError('required')">
                         Email is required
@@ -53,7 +53,7 @@
 
                 <mat-form-field appearance="outline">
                     <mat-label>Password</mat-label>
-                    <input matInput type="password" formControlName="password">
+                    <input matInput type="password" formControlName="password" autocomplete="password">
                     <mat-icon matSuffix class="secondary-text">vpn_key</mat-icon>
                     <mat-error>
                         Password is required
@@ -62,7 +62,7 @@
 
                 <mat-form-field appearance="outline">
                     <mat-label>Password (Confirm)</mat-label>
-                    <input matInput type="password" formControlName="passwordConfirm">
+                    <input matInput type="password" formControlName="passwordConfirm" autocomplete="passwordConfirm">
                     <mat-icon matSuffix class="secondary-text">vpn_key</mat-icon>
                     <mat-error *ngIf="registerForm.get('passwordConfirm').hasError('required')">
                         Password confirmation is required
@@ -74,14 +74,14 @@
                 </mat-form-field>
 
                 <div class="terms" fxLayout="row" fxLayoutAlign="center center">
-                    <mat-checkbox name="terms" aria-label="Accept" required>
+                    <mat-checkbox name="terms" aria-label="Accept" formControlName="terms" autocomplete="terms">
                         <span>Accept</span>
                     </mat-checkbox>
                     <a href="#">terms and conditions</a>
                 </div>
 
                 <button mat-raised-button color="accent" class="submit-button" aria-label="CREATE AN ACCOUNT"
-                        [disabled]="registerForm.invalid">
+                        [disabled]="registerForm.invalid" (click)="createAccount()">
                     CREATE AN ACCOUNT
                 </button>
 
