--- a/src/app/main/pages/authentication/reset-password-2/reset-password-2.component.html
+++ b/src/app/main/pages/authentication/reset-password-2/reset-password-2.component.html
@@ -7,7 +7,7 @@
         </div>
 
         <div class="title" [@animate]="{value:'*',params:{delay:'50ms',y:'25px'}}">
-            Welcome to the FUSE!
+            Welcome to 1WORLD.IO !
         </div>
 
         <div class="description" [@animate]="{value:'*',params:{delay:'100ms',y:'25px'}}">
@@ -32,7 +32,7 @@
 
                 <mat-form-field appearance="outline">
                     <mat-label>Email</mat-label>
-                    <input matInput formControlName="email">
+                    <input matInput formControlName="email" autocomplete="email">
                     <mat-icon matSuffix class="secondary-text">mail</mat-icon>
                     <mat-error *ngIf="resetPasswordForm.get('email').hasError('required')">
                         Email is required
@@ -44,7 +44,7 @@
 
                 <mat-form-field appearance="outline">
                     <mat-label>Password</mat-label>
-                    <input matInput type="password" formControlName="password">
+                    <input matInput type="password" formControlName="password" autocomplete="password">
                     <mat-icon matSuffix class="secondary-text">vpn_key</mat-icon>
                     <mat-error>
                         Password is required
@@ -53,7 +53,7 @@
 
                 <mat-form-field appearance="outline">
                     <mat-label>Password (Confirm)</mat-label>
-                    <input matInput type="password" formControlName="passwordConfirm">
+                    <input matInput type="password" formControlName="passwordConfirm" autocomplete="passwordConfirm">
                     <mat-icon matSuffix class="secondary-text">vpn_key</mat-icon>
                     <mat-error *ngIf="resetPasswordForm.get('passwordConfirm').hasError('required')">
                         Password confirmation is required
@@ -65,13 +65,13 @@
                 </mat-form-field>
 
                 <button mat-raised-button class="submit-button" color="accent"
-                        aria-label="RESET MY PASSWORD" [disabled]="resetPasswordForm.invalid">
+                        aria-label="RESET MY PASSWORD" [disabled]="resetPasswordForm.invalid" (click)="resetPassword()">
                     RESET MY PASSWORD
                 </button>
             </form>
 
             <div class="login" fxLayout="row" fxLayoutAlign="center center">
-                <a class="link" [routerLink]="'/pages/auth/login-2'">Go back to login</a>
+                <a class="link" [routerLink]="'/auth/login-2'">Go back to login</a>
             </div>
 
         </div>
