--- a/src/app/layout/components/navbar/vertical/style-1/style-1.component.html
+++ b/src/app/layout/components/navbar/vertical/style-1/style-1.component.html
@@ -27,8 +27,8 @@
 
     <div class="user" fxLayout="column" [ngClass]="fuseConfig.layout.navbar.secondaryBackground">
 
-        <div class="h3 username">Azrin Amin</div>
-        <div class="h5 email hint-text mt-8">azrin640@gmail.com</div>
+        <div class="h3 username" *ngIf="user">{{ user.username }}</div>
+        <div class="h5 email hint-text mt-8" *ngIf="user">{{ user.email }}</div>
         <div class="avatar-container" [ngClass]="fuseConfig.layout.navbar.primaryBackground">
             <img class="avatar" src="assets/images/avatars/azrin.jpg">
         </div>
